01_k8s_basics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw01-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw01-app
  template:
    metadata:
      labels:
        app: hw01-app
    spec:
      containers:
        - name: hw01
          image: thanhtranit/hw01-k8s-basics:0.0.1
          ports:
            - name: web
              containerPort: 8000
