01_k8s_basics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw01-service
spec:
  selector:
    app: hw01-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: NodePort
