01_k8s_basics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw01-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: hw01-service
                port:
                  number: 8000
          - path: /otusapp/?(.*)($|/)
            pathType: Prefix
            backend:
              service:
                name: hw01-service
                port:
                  number: 8000
